--- a/RNN+Embeddings/Seq2Seq.ipynb
+++ b/RNN+Embeddings/Seq2Seq.ipynb
@@ -13,7 +13,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "deletable": true,
+    "editable": true
+   },
    "source": [
     "A ideia por traz das RNNs é fazer uso de informações sequenciais. Em uma rede neural tradicional, assumimos que todas as entradas (e saídas) são independentes umas das outras. Esse comportamento é um problema para muitos tipos de tarefas. Se quisermos por exemplo a próxima palavra em uma frase, precisaremos saber quais palavras vieram antes dela. Esse tipo de rede é chamada de recorrente pois executam a mesma tarefa para cada elemento de uma sequência, com a saída sendo dependente dos cálculos anteriores. Outra maneira de pensar sobre RNNs é que elas possuem \"memória\" que guarda informações sobre o que foi calculado até agora.\n",
     "\n",
@@ -116,29 +119,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "from keras.models import Model\n",
     "from keras.layers import Input, Dense, LSTM\n",
     "import numpy as np\n",
+    "import os\n",
     "\n",
     "latent_dim = 512  #Tamanho do estado h\n",
     "num_samples = 100000  # Numero de amostras a serem usadas\n",
     "\n",
     "\n",
     "#Arquivo com pares inglês-português\n",
-    "data_path = 'data/por.txt'\n"
+    "data_path = os.path.join('data', 'por.txt')\n",
+    "#data_path = 'data/por.txt'\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -244,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -286,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -301,17 +314,17 @@
       "____________________________________________________________________________________________________\n",
       "Layer (type)                     Output Shape          Param #     Connected to                     \n",
       "====================================================================================================\n",
-      "input_3 (InputLayer)             (None, None, 86)      0                                            \n",
+      "input_1 (InputLayer)             (None, None, 86)      0                                            \n",
       "____________________________________________________________________________________________________\n",
-      "input_4 (InputLayer)             (None, None, 111)     0                                            \n",
+      "input_2 (InputLayer)             (None, None, 111)     0                                            \n",
       "____________________________________________________________________________________________________\n",
-      "lstm_3 (LSTM)                    [(None, 512), (None,  1226752     input_3[0][0]                    \n",
+      "lstm_1 (LSTM)                    [(None, 512), (None,  1226752     input_1[0][0]                    \n",
       "____________________________________________________________________________________________________\n",
-      "lstm_4 (LSTM)                    [(None, None, 512), ( 1277952     input_4[0][0]                    \n",
-      "                                                                   lstm_3[0][1]                     \n",
-      "                                                                   lstm_3[0][2]                     \n",
+      "lstm_2 (LSTM)                    [(None, None, 512), ( 1277952     input_2[0][0]                    \n",
+      "                                                                   lstm_1[0][1]                     \n",
+      "                                                                   lstm_1[0][2]                     \n",
       "____________________________________________________________________________________________________\n",
-      "dense_2 (Dense)                  (None, None, 111)     56943       lstm_4[0][0]                     \n",
+      "dense_1 (Dense)                  (None, None, 111)     56943       lstm_2[0][0]                     \n",
       "====================================================================================================\n",
       "Total params: 2,561,647\n",
       "Trainable params: 2,561,647\n",
@@ -324,7 +337,9 @@
     "model.summary()\n",
     "\n",
     "#Pesos do treino já executado\n",
-    "model.load_weights('model/seq2seq_weights.h5')"
+    "model_path = os.path.join('model', 'seq2seq_weights.h5')\n",
+    "model.load_weights(model_path)\n",
+    "#model.load_weights('model/seq2seq_weights.h5')"
    ]
   },
   {
@@ -388,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -440,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -524,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -642,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -714,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -726,14 +741,14 @@
      "output_type": "stream",
      "text": [
       "-\n",
-      "Input: Where is my cat?\n",
-      "Output: Onde está o meu carro?\n",
+      "Input: I liked that hair\n",
+      "Output: Eu gostei daquela música.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "teste('Where is my cat?')"
+    "teste('I liked that hair')"
    ]
   },
   {
